--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp": "^3.5.6",
     "gulp-rename": "^1.2.0",
     "gulp-minify-css": "^0.3.0",
-    "gulp-autoprefixer": "0.0.6"
+    "gulp-autoprefixer": "0.0.6",
+    "gulp-ruby-sass": "^0.4.0"
   }
 }
